# 2gbm

./: README.md  pyproject.toml  requirements.txt
STservo_sdk/: ST_Registermap.xls  scscl.py  sts.py
excercises/: 01_forwKin.py  a_remap.py  b_forwKin.py  c_forwKin.py  d_forwKin.py  e_forwKin.py  f_inv_remap.py  g_invKin.py  h_check_workspace.py  i_invKin.py  j_syncMove.py  k_syncMove.py  l_moveP2P.py
integration_tests/: joystick2motor.py
oop/: Joystick.py  Motor.py  Robot.py  a_remap.py  b_forwKin.py  f_inv_remap.py  g_invKin.py  j_syncMove.py  joystick_test.py  l_moveP2P.py
paths/: add_path.py  add_point.py  create_path.py  hoi.py  points.json
solutions/: 01_forwKin_sol.py  Motor.py  Robot.py  a_remap_sol.py  b_forwKin_sol.py  c_forwKin_sol.py  d_forwKin_sol.py  e_forwKin_sol.py  f_inv_remap_sol.py  g_invKin.py  g_invKin_sol.py  h_check_workspace.py  h_check_workspace_sol.py  j_syncMove.py  l_moveP2P.py  l_moveP2P_sol.py  m_Joystick.py  m_moveL_sol.py  n_Jacobi.py  solution_test.py
solutions/old/: a_remap_sol_servo.py  b_forwKin_sol.py  c_forwKin_sol.py  d_forwKin_sol.py  d_forwKin_sol_servo.py  e_forwKin_sol.py  g_invKin_sol.py  h_check_workspace_sol.py  i_invKin_sol.py  j_syncMove_sol.py  k_syncMove_sol.py  l_moveP2P_sol.py
unit_tests/: P2P_utils.py  Wheel_utils.py  changeID.py  changeID_SC.py  change_hold.py  create_path.py  get_position_servo.py  get_position_wheel.py  gripper.py  joystick.py  ping.py  reset_offset.py  set_position_servo.py  set_speed.py  zero_motors.py
