[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2GBM"
version = "2026.1.0"
description = "Software zum ersten Teil im msL"
requires-python = ">=3.11,<3.13"

dependencies = [
    "numpy==2.2.3",
    "pyserial==3.5",
    "python-dotenv==1.0.1"
]